Fix has-no-alignment large grid display error

--- a/src/styles/style/_grid.scss
+++ b/src/styles/style/_grid.scss
@@ -70,7 +70,7 @@
 	}
 }
 
-.has-grid-lrg.has-no-alignment .blockgallery--item {
+.has-no-alignment .has-grid-lrg .blockgallery--item {
 
 	@media (min-width: 400px) {
 		width: 1 / 2 * 100%;
